SC[UNIONVMS] - fixed combobox when has scrollbar
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/unionvms-web@8771 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/app/partial/spatial/liveViewPanel/mapPanel/mapPanel.less
+++ b/app/partial/spatial/liveViewPanel/mapPanel/mapPanel.less
@@ -1,4 +1,5 @@
 .mapPanelContainer{
+	position: relative;
 	&.fullscreen{
 		width: 100%;
     	height: 100%;
